@@ -1,280 +1,244 @@
 package com.securitygateway.nextstep.service;
 
-import com.securitygateway.nextstep.model.*;
 import com.securitygateway.nextstep.Dtos.requests.StudyRoomBookingRequest;
-import com.securitygateway.nextstep.Dtos.responses.GeneralAPIResponse;
 import com.securitygateway.nextstep.Dtos.responses.StudyRoomBookingResponse;
+import com.securitygateway.nextstep.model.*;
 import com.securitygateway.nextstep.repository.StudyRoomBookingRepository;
+import com.securitygateway.nextstep.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
-import org.springframework.http.*;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
 
 import java.time.*;
 import java.time.format.DateTimeFormatter;
 import java.util.*;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class StudyRoomService {
 
     private final StudyRoomBookingRepository bookingRepository;
+    private final UserRepository userRepository;
 
-    private static final List<String> ROOMS = List.of("A1","A2","A3","B1","B2","C1","C2","C3");
     private static final DateTimeFormatter TIME_FMT = DateTimeFormatter.ofPattern("HH:mm");
 
-    private static final LocalTime OPEN_TIME = LocalTime.of(8, 0);
-    private static final LocalTime CLOSE_TIME = LocalTime.of(21, 0);
+    // ================= USER =================
 
-    // ✅ expiry status update
-    private void runExpiryNow() {
-        bookingRepository.markExpired(LocalDateTime.now());
-    }
-
-    private boolean isAdmin(User user) {
-        if (user == null) return false;
-        Object role = user.getRole();
-        return role != null && role.toString().equalsIgnoreCase("ADMIN");
-    }
-
-    private ResponseEntity<?> unauthorized() {
-        return ResponseEntity.status(401).body(
-                GeneralAPIResponse.builder().message("Unauthorized: Please login again").build()
-        );
-    }
-
-    private ResponseEntity<?> forbidden() {
-        return ResponseEntity.status(403).body(
-                GeneralAPIResponse.builder().message("Forbidden: Admin only").build()
-        );
-    }
-
-    private StudyRoomBookingResponse toRes(StudyRoomBooking b) {
-        return StudyRoomBookingResponse.builder()
-                .id(b.getId())
-                .room(b.getRoom())
-                .date(b.getDate())
-                .startTime(b.getStartTime() == null ? null : b.getStartTime().format(TIME_FMT))
-                .endTime(b.getEndTime() == null ? null : b.getEndTime().format(TIME_FMT))
-                .durationMinutes(b.getDurationMinutes())
-                .status(b.getStatus())
-                .userId(b.getUser() != null ? b.getUser().getId() : null)
-                .build();
-    }
-
-    private ResponseEntity<?> validateTimeWindow(LocalTime start, LocalTime end) {
-        if (start.isBefore(OPEN_TIME)) {
-            return ResponseEntity.badRequest().body(
-                    GeneralAPIResponse.builder().message("Bookings open at 08:00 AM").build()
-            );
-        }
-        if (end.isAfter(CLOSE_TIME)) {
-            return ResponseEntity.badRequest().body(
-                    GeneralAPIResponse.builder().message("Bookings must end by 09:00 PM").build()
-            );
-        }
-        return null;
-    }
-
-    // ------------------ CREATE ------------------
-    @Transactional
-    public ResponseEntity<?> bookRoom(StudyRoomBookingRequest request, User user) {
-        if (user == null || user.getId() == null) return unauthorized();
-        runExpiryNow();
-
-        String room = request.getRoom() == null ? "" : request.getRoom().trim();
-        if (!ROOMS.contains(room)) {
-            return ResponseEntity.badRequest().body(
-                    GeneralAPIResponse.builder().message("Invalid room. Allowed: " + ROOMS).build()
-            );
-        }
-
-        LocalDate date;
-        try {
-            date = LocalDate.parse(request.getDate().trim());
-        } catch (Exception e) {
-            return ResponseEntity.badRequest().body(
-                    GeneralAPIResponse.builder().message("Invalid date. Use yyyy-MM-dd").build()
-            );
-        }
-
-        LocalTime start;
-        try {
-            start = LocalTime.parse(request.getTime().trim(), TIME_FMT);
-        } catch (Exception e) {
-            return ResponseEntity.badRequest().body(
-                    GeneralAPIResponse.builder().message("Invalid time. Use HH:mm (e.g. 14:30)").build()
-            );
-        }
-
-        int duration = (request.getDurationMinutes() == null) ? 60 : request.getDurationMinutes();
-        if (duration <= 0 || duration > 240) {
-            return ResponseEntity.badRequest().body(
-                    GeneralAPIResponse.builder().message("durationMinutes must be 1..240").build()
-            );
-        }
-
+    public ResponseEntity<?> bookRoom(StudyRoomBookingRequest req, User user) {
+        LocalDate date = LocalDate.parse(req.getDate());
+        LocalTime start = LocalTime.parse(req.getTime(), TIME_FMT);
+        int duration = req.getDurationMinutes();
         LocalTime end = start.plusMinutes(duration);
 
-        ResponseEntity<?> timeErr = validateTimeWindow(start, end);
-        if (timeErr != null) return timeErr;
-
-        if (bookingRepository.hasOverlap(room, date, start, end)) {
-            return ResponseEntity.status(HttpStatus.CONFLICT).body(
-                    GeneralAPIResponse.builder().message("Time overlap: already booked").build()
-            );
-        }
-
-        LocalDateTime expireAt = LocalDateTime.of(date, end);
+        if (bookingRepository.hasOverlap(req.getRoom(), date, start, end))
+            return ResponseEntity.status(HttpStatus.CONFLICT)
+                    .body("Time conflict");
 
         StudyRoomBooking booking = StudyRoomBooking.builder()
-                .room(room)
+                .room(req.getRoom())
                 .date(date)
                 .startTime(start)
                 .endTime(end)
                 .durationMinutes(duration)
-                .expireAt(expireAt)
                 .status(BookingStatus.ACTIVE)
                 .user(user)
+                .expireAt(LocalDateTime.of(date, end))
                 .build();
 
-        StudyRoomBooking saved = bookingRepository.save(booking);
+        bookingRepository.save(booking);
 
-        Map<String, Object> res = new HashMap<>();
-        res.put("message", "Room booked successfully");
-        res.put("booking", toRes(saved));
-        res.put("totalRooms", ROOMS.size());
-        return ResponseEntity.ok(res);
+        // Return success message with booking ID
+        String responseMessage = "Booked successfully. Booking ID: " + booking.getId();
+        return ResponseEntity.ok(responseMessage);
     }
-
-    // ------------------ READ: MY BOOKINGS ------------------
-    @Transactional
     public ResponseEntity<?> myBookings(User user) {
-        if (user == null || user.getId() == null) return unauthorized();
-        runExpiryNow();
-
-        List<StudyRoomBookingResponse> list = bookingRepository
-                .findByUserIdOrderByDateDescStartTimeDesc(user.getId())
-                .stream().map(this::toRes).toList();
-
+        List<StudyRoomBookingResponse> list = bookingRepository.findByUserIdOrderByDateDescStartTimeDesc(user.getId())
+                .stream().map(this::toResponse).collect(Collectors.toList());
         return ResponseEntity.ok(list);
     }
 
-    // ------------------ AVAILABILITY ------------------
-    @Transactional
-    public ResponseEntity<?> availability(String dateStr, String timeStr, Integer durationMinutes) {
-        runExpiryNow();
-
-        LocalDate date;
-        try {
-            date = LocalDate.parse(dateStr.trim());
-        } catch (Exception e) {
-            return ResponseEntity.badRequest().body(
-                    GeneralAPIResponse.builder().message("Invalid date. Use yyyy-MM-dd").build()
-            );
-        }
-
-        LocalTime start;
-        try {
-            start = LocalTime.parse(timeStr.trim(), TIME_FMT);
-        } catch (Exception e) {
-            return ResponseEntity.badRequest().body(
-                    GeneralAPIResponse.builder().message("Invalid time. Use HH:mm").build()
-            );
-        }
-
-        int duration = (durationMinutes == null) ? 60 : durationMinutes;
-        if (duration <= 0 || duration > 240) {
-            return ResponseEntity.badRequest().body(
-                    GeneralAPIResponse.builder().message("durationMinutes must be 1..240").build()
-            );
-        }
-
-        LocalTime end = start.plusMinutes(duration);
-
-        ResponseEntity<?> timeErr = validateTimeWindow(start, end);
-        if (timeErr != null) return timeErr;
-
-        List<String> availableRooms = ROOMS.stream()
-                .filter(r -> !bookingRepository.hasOverlap(r, date, start, end))
-                .toList();
-
-        Map<String, Object> res = new HashMap<>();
-        res.put("date", dateStr);
-        res.put("startTime", timeStr);
-        res.put("endTime", end.format(TIME_FMT));
-        res.put("durationMinutes", duration);
-        res.put("totalRooms", ROOMS.size());
-        res.put("availableRoomsCount", availableRooms.size());
-        res.put("availableRooms", availableRooms);
-
-        return ResponseEntity.ok(res);
+    public ResponseEntity<?> userViewAllBookings(User user) {
+        // For availability chart, show all bookings but read-only
+        List<StudyRoomBookingResponse> list = bookingRepository.findAllByOrderByDateDescStartTimeDesc()
+                .stream().map(this::toResponse).collect(Collectors.toList());
+        return ResponseEntity.ok(list);
     }
 
-    // ✅ NEW FEATURE: UPDATE (OWNER ONLY)
-    @Transactional
-    public ResponseEntity<?> updateBooking(Long id, StudyRoomBookingRequest request, User user) {
-        if (user == null || user.getId() == null) return unauthorized();
-        runExpiryNow();
-
+    public ResponseEntity<?> updateBooking(Long id, StudyRoomBookingRequest req, User user) {
         StudyRoomBooking booking = bookingRepository.findByIdAndUserId(id, user.getId()).orElse(null);
-        if (booking == null) {
-            return ResponseEntity.status(404).body(
-                    GeneralAPIResponse.builder().message("Booking not found").build()
-            );
-        }
+        if (booking == null) return ResponseEntity.status(404).body("Booking not found");
 
-        if (booking.getStatus() != BookingStatus.ACTIVE) {
-            return ResponseEntity.badRequest().body(
-                    GeneralAPIResponse.builder().message("Only ACTIVE bookings can be updated").build()
-            );
-        }
+        LocalDateTime bookingStart = LocalDateTime.of(booking.getDate(), booking.getStartTime());
+        if (LocalDateTime.now().isAfter(bookingStart.minusHours(2)))
+            return ResponseEntity.badRequest().body("Must update 2 hours before");
 
-        String room = request.getRoom() == null ? "" : request.getRoom().trim();
-        if (!ROOMS.contains(room)) {
-            return ResponseEntity.badRequest().body(
-                    GeneralAPIResponse.builder().message("Invalid room. Allowed: " + ROOMS).build()
-            );
-        }
-
-        LocalDate date;
-        try {
-            date = LocalDate.parse(request.getDate().trim());
-        } catch (Exception e) {
-            return ResponseEntity.badRequest().body(
-                    GeneralAPIResponse.builder().message("Invalid date. Use yyyy-MM-dd").build()
-            );
-        }
-
-        LocalTime start;
-        try {
-            start = LocalTime.parse(request.getTime().trim(), TIME_FMT);
-        } catch (Exception e) {
-            return ResponseEntity.badRequest().body(
-                    GeneralAPIResponse.builder().message("Invalid time. Use HH:mm").build()
-            );
-        }
-
-        int duration = (request.getDurationMinutes() == null) ? 60 : request.getDurationMinutes();
-        if (duration <= 0 || duration > 240) {
-            return ResponseEntity.badRequest().body(
-                    GeneralAPIResponse.builder().message("durationMinutes must be 1..240").build()
-            );
-        }
-
+        LocalDate date = LocalDate.parse(req.getDate());
+        LocalTime start = LocalTime.parse(req.getTime(), TIME_FMT);
+        int duration = req.getDurationMinutes();
         LocalTime end = start.plusMinutes(duration);
 
-        ResponseEntity<?> timeErr = validateTimeWindow(start, end);
-        if (timeErr != null) return timeErr;
+        if (bookingRepository.hasOverlapExcludingId(id, req.getRoom(), date, start, end))
+            return ResponseEntity.status(HttpStatus.CONFLICT).body("Time conflict");
 
-        // ✅ exclude current booking id when checking overlap
-        if (bookingRepository.hasOverlapExcludingId(booking.getId(), room, date, start, end)) {
-            return ResponseEntity.status(HttpStatus.CONFLICT).body(
-                    GeneralAPIResponse.builder().message("Time overlap: already booked").build()
-            );
+        booking.setRoom(req.getRoom());
+        booking.setDate(date);
+        booking.setStartTime(start);
+        booking.setEndTime(end);
+        booking.setDurationMinutes(duration);
+        booking.setExpireAt(LocalDateTime.of(date, end));
+
+        bookingRepository.save(booking);
+        return ResponseEntity.ok("Updated successfully");
+    }
+
+    public ResponseEntity<?> cancelBooking(Long id, User user) {
+        StudyRoomBooking booking = bookingRepository.findByIdAndUserId(id, user.getId()).orElse(null);
+        if (booking == null) {
+            return ResponseEntity.status(404).body("Booking with ID " + id + " not found");
         }
 
-        booking.setRoom(room);
+        bookingRepository.delete(booking);
+
+        // Return a response including the cancelled booking ID
+        return ResponseEntity.ok("Booking with ID " + id + " cancelled successfully");
+    }
+
+    public ResponseEntity<?> availability(String dateStr, Integer durationMinutes) {
+
+        LocalDate date = LocalDate.parse(dateStr);
+
+        LocalTime openTime = LocalTime.of(8, 0);
+        LocalTime closeTime = LocalTime.of(22, 0);
+
+        List<String> allRooms = List.of("A1", "A2", "A3", "B1", "B2", "C1", "C2", "C3");
+
+        List<StudyRoomBooking> bookings =
+                bookingRepository.findByDateAndStatusOrderByRoomAscStartTimeAsc(
+                        date, BookingStatus.ACTIVE);
+
+        Map<String, List<StudyRoomBooking>> bookingsByRoom =
+                bookings.stream().collect(Collectors.groupingBy(StudyRoomBooking::getRoom));
+
+        List<Map<String, String>> availableDetails = new ArrayList<>();
+
+        for (String room : allRooms) {
+
+            List<StudyRoomBooking> roomBookings =
+                    bookingsByRoom.getOrDefault(room, new ArrayList<>());
+
+            if (roomBookings.isEmpty()) {
+
+                availableDetails.add(Map.of(
+                        "room", room,
+                        "availableFrom", openTime.toString(),
+                        "availableTo", closeTime.toString()
+                ));
+
+            } else {
+
+                LocalTime previousEnd = openTime;
+
+                for (StudyRoomBooking booking : roomBookings) {
+
+                    if (previousEnd.isBefore(booking.getStartTime())) {
+
+                        availableDetails.add(Map.of(
+                                "room", room,
+                                "availableFrom", previousEnd.toString(),
+                                "availableTo", booking.getStartTime().toString()
+                        ));
+                    }
+
+                    previousEnd = booking.getEndTime();
+                }
+
+                if (previousEnd.isBefore(closeTime)) {
+
+                    availableDetails.add(Map.of(
+                            "room", room,
+                            "availableFrom", previousEnd.toString(),
+                            "availableTo", closeTime.toString()
+                    ));
+                }
+            }
+        }
+
+        Map<String, Object> response = new HashMap<>();
+        response.put("bookedDetails", bookings);
+        response.put("availableDetails", availableDetails);
+
+        return ResponseEntity.ok(response);
+    }
+
+    // ================= ADMIN =================
+
+    public ResponseEntity<?> adminAllBookings(User admin) {
+        List<StudyRoomBooking> bookings = bookingRepository.findAllByOrderByDateDescStartTimeDesc();
+        Map<Long, Map<String, Object>> userBookingsMap = new LinkedHashMap<>();
+
+        for (StudyRoomBooking b : bookings) {
+            Long userId = b.getUser().getId();
+            userBookingsMap.putIfAbsent(userId, Map.of(
+                    "userId", userId,
+                    "userName", b.getUser().getFullName(),
+                    "userEmail", b.getUser().getEmail(),
+                    "bookings", new ArrayList<>()
+            ));
+
+            List<Map<String, Object>> userBookings = (List<Map<String, Object>>) userBookingsMap.get(userId).get("bookings");
+            userBookings.add(Map.of(
+                    "id", b.getId(),
+                    "room", b.getRoom(),
+                    "date", b.getDate().toString(),
+                    "startTime", b.getStartTime().format(TIME_FMT),
+                    "endTime", b.getEndTime().format(TIME_FMT),
+                    "durationMinutes", b.getDurationMinutes(),
+                    "status", b.getStatus()
+            ));
+        }
+
+        return ResponseEntity.ok(userBookingsMap.values());
+    }
+
+    public ResponseEntity<?> adminDeleteBooking(Long id, User admin) {
+        // 1️⃣ Booking එක query කරන්න
+        Optional<StudyRoomBooking> optionalBooking = bookingRepository.findById(id);
+
+        if (optionalBooking.isEmpty()) {
+            return ResponseEntity.status(404).body("Booking not found");
+        }
+
+        StudyRoomBooking booking = optionalBooking.get();
+
+        // 2️⃣ Booking delete කරන්න
+        bookingRepository.deleteById(id);
+
+        // 3️⃣ Response prepare කරන්න
+        Map<String, Object> response = Map.of(
+                "deletedBookingId", booking.getId(),
+                "userId", booking.getUser().getId(),
+                "userName", booking.getUser().getFullName(),
+                "userEmail", booking.getUser().getEmail()
+        );
+
+        return ResponseEntity.ok(response);
+    }
+
+    public ResponseEntity<?> adminUpdateAny(Long id, StudyRoomBookingRequest req, User admin) {
+        StudyRoomBooking booking = bookingRepository.findById(id).orElse(null);
+        if (booking == null) return ResponseEntity.status(404).body("Booking not found");
+
+        LocalDate date = LocalDate.parse(req.getDate());
+        LocalTime start = LocalTime.parse(req.getTime(), TIME_FMT);
+        int duration = req.getDurationMinutes();
+        LocalTime end = start.plusMinutes(duration);
+
+        if (bookingRepository.hasOverlapExcludingId(id, req.getRoom(), date, start, end))
+            return ResponseEntity.status(HttpStatus.CONFLICT).body("Time conflict");
+
+        booking.setRoom(req.getRoom());
         booking.setDate(date);
         booking.setStartTime(start);
         booking.setEndTime(end);
@@ -283,110 +247,79 @@ public class StudyRoomService {
 
         bookingRepository.save(booking);
 
-        Map<String, Object> res = new HashMap<>();
-        res.put("message", "Booking updated successfully");
-        res.put("booking", toRes(booking));
-        return ResponseEntity.ok(res);
-    }
-
-    // ------------------ CANCEL (OWNER ONLY) ------------------
-    @Transactional
-    public ResponseEntity<?> cancelBooking(Long id, User user) {
-        if (user == null || user.getId() == null) return unauthorized();
-        runExpiryNow();
-
-        StudyRoomBooking booking = bookingRepository.findByIdAndUserId(id, user.getId()).orElse(null);
-        if (booking == null) {
-            return ResponseEntity.status(404).body(
-                    GeneralAPIResponse.builder().message("Booking not found").build()
-            );
-        }
-
-        if (booking.getStatus() != BookingStatus.ACTIVE) {
-            return ResponseEntity.badRequest().body(
-                    GeneralAPIResponse.builder().message("Booking already " + booking.getStatus()).build()
-            );
-        }
-
-        booking.setStatus(BookingStatus.CANCELLED);
-        bookingRepository.save(booking);
-
-        return ResponseEntity.ok(
-                GeneralAPIResponse.builder().message("Booking cancelled successfully").build()
+        // Return updated booking details
+        Map<String, Object> response = Map.of(
+                "bookingId", booking.getId(),
+                "userId", booking.getUser().getId(),
+                "userName", booking.getUser().getFullName(),
+                "userEmail", booking.getUser().getEmail(),
+                "room", booking.getRoom(),
+                "date", booking.getDate().toString(),
+                "startTime", booking.getStartTime().format(TIME_FMT),
+                "endTime", booking.getEndTime().format(TIME_FMT),
+                "durationMinutes", booking.getDurationMinutes()
         );
+
+        return ResponseEntity.ok(response);
     }
 
-    // ------------------ ADMIN: ALL BOOKINGS ------------------
-    @Transactional
-    public ResponseEntity<?> adminAllBookings(User user) {
-        if (user == null || user.getId() == null) return unauthorized();
-        if (!isAdmin(user)) return forbidden();
-        runExpiryNow();
+    public ResponseEntity<?> adminBookForUser(Long userId, StudyRoomBookingRequest req, User admin) {
+        User user = userRepository.findById(userId).orElse(null);
+        if (user == null) return ResponseEntity.status(404).body("User not found");
 
-        List<StudyRoomBookingResponse> list = bookingRepository
-                .findAllByOrderByDateDescStartTimeDesc()
-                .stream().map(this::toRes).toList();
-
-        Map<String, Object> res = new HashMap<>();
-        res.put("totalRooms", ROOMS.size());
-        res.put("bookings", list);
-        return ResponseEntity.ok(res);
+        return bookRoom(req, user);
     }
 
-    // ------------------ ADMIN: BY DATE (ACTIVE ONLY) ------------------
-    @Transactional
-    public ResponseEntity<?> adminBookingsByDate(String dateStr, User user) {
-        if (user == null || user.getId() == null) return unauthorized();
-        if (!isAdmin(user)) return forbidden();
-        runExpiryNow();
+    public ResponseEntity<?> adminViewAllUsersBookings(User admin) {
+        List<User> users = userRepository.findAll();
+        List<Map<String, Object>> result = new ArrayList<>();
 
-        LocalDate date = LocalDate.parse(dateStr.trim());
+        for (User u : users) {
+            // Fetch bookings for this user
+            List<StudyRoomBooking> bookings = bookingRepository.findAllByUserOrderByDateDescStartTimeDesc(u);
 
-        List<StudyRoomBookingResponse> list = bookingRepository
-                .findByDateAndStatusOrderByRoomAscStartTimeAsc(date, BookingStatus.ACTIVE)
-                .stream().map(this::toRes).toList();
+            // Map each booking to a clean JSON structure
+            List<Map<String, Object>> userBookings = bookings.stream()
+                    .map(b -> Map.<String, Object>of(
+                            "bookingId", b.getId(),
+                            "room", b.getRoom(),
+                            "date", b.getDate().toString(),
+                            "startTime", b.getStartTime().format(TIME_FMT),
+                            "endTime", b.getEndTime().format(TIME_FMT),
+                            "durationMinutes", b.getDurationMinutes(),
+                            "status", b.getStatus().name() // better as String
+                    ))
+                    .collect(Collectors.toList());
 
-        return ResponseEntity.ok(list);
-    }
-
-    // ------------------ ADMIN: BY STATUS ------------------
-    @Transactional
-    public ResponseEntity<?> adminBookingsByStatus(String statusStr, User user) {
-        if (user == null || user.getId() == null) return unauthorized();
-        if (!isAdmin(user)) return forbidden();
-        runExpiryNow();
-
-        BookingStatus status;
-        try {
-            status = BookingStatus.valueOf(statusStr.trim().toUpperCase());
-        } catch (Exception e) {
-            return ResponseEntity.badRequest().body(
-                    GeneralAPIResponse.builder().message("Invalid status. Use ACTIVE/CANCELLED/EXPIRED").build()
+            // Create user map with bookings
+            Map<String, Object> userMap = Map.of(
+                    "userId", u.getId(),
+                    "userName", u.getFullName(),
+                    "userEmail", u.getEmail(),
+                    "bookings", userBookings
             );
+
+            result.add(userMap);
         }
 
-        List<StudyRoomBookingResponse> list = bookingRepository
-                .findByStatusOrderByDateDescStartTimeDesc(status)
-                .stream().map(this::toRes).toList();
-
-        return ResponseEntity.ok(list);
+        return ResponseEntity.ok(result);
     }
 
-    // ------------------ ADMIN: HARD DELETE ------------------
-    @Transactional
-    public ResponseEntity<?> adminDeleteBooking(Long id, User user) {
-        if (user == null || user.getId() == null) return unauthorized();
-        if (!isAdmin(user)) return forbidden();
-
-        if (!bookingRepository.existsById(id)) {
-            return ResponseEntity.status(404).body(
-                    GeneralAPIResponse.builder().message("Booking not found").build()
-            );
-        }
-
-        bookingRepository.deleteById(id);
-        return ResponseEntity.ok(
-                GeneralAPIResponse.builder().message("Booking permanently deleted").build()
-        );
+    // ================= UTIL =================
+    private StudyRoomBookingResponse toResponse(StudyRoomBooking b) {
+        return StudyRoomBookingResponse.builder()
+                .id(b.getId())
+                .room(b.getRoom())
+                .date(b.getDate())
+                .startTime(b.getStartTime().format(TIME_FMT))
+                .endTime(b.getEndTime().format(TIME_FMT))
+                .durationMinutes(b.getDurationMinutes())
+                .status(b.getStatus())
+                .userId(b.getUser().getId())
+                .userEmail(b.getUser().getEmail())
+                .userName(b.getUser().getFullName())
+                .expireAt(b.getExpireAt())
+                .expired(LocalDateTime.now().isAfter(b.getExpireAt()))
+                .build();
     }
 }
